--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
   "preferGlobal": true,
   "repository": "git://github.com/chjj/marked.git",
   "homepage": "https://github.com/chjj/marked",
-  "bugs": { "url": "http://github.com/chjj/marked/issues" },
-  "license": "MIT",
-  "keywords": ["markdown", "markup", "html"],
-  "tags": ["markdown", "markup", "html"],
-  "devDependencies": {
-    "markdown": "*",
-    "showdown": "*",
-    "gulp": "^3.8.11",
-    "gulp-uglify": "^1.1.0",
-    "gulp-concat": "^2.5.2"
+  "bugs": {
+    "url": "http://github.com/chjj/marked/issues"
   },
-  "scripts": { "test": "node test", "bench": "node test --bench" }
+  "license": "MIT",
+  "tags": [
+    "markdown",
+    "markup",
+    "html"
+  ],
+  "devDependencies": {
+    "ava": "^0.9.1",
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.1.0",
+    "markdown": "*",
+    "showdown": "*"
+  },
+  "scripts": {
+    "watch": "babel -w src/ -d lib/",
+    "test": "ava ./test/*.spec.js"
+  },
+  "dependencies": {
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0"
+  }
 }
